added reset password, send email, forgot password, change password features. add Email Template entity to identityContext. Added bunch of things to ui, and improved validation

--- a/src/Presentation/Views/EmployeeAccount/ResetPassword.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/ResetPassword.cshtml
@@ -1,7 +1,7 @@
-﻿@model Nika1337.Library.Presentation.Models.EmployeeAccount.ChangePasswordViewModel
+﻿@model Nika1337.Library.Presentation.Models.EmployeeAccount.ResetPasswordViewModel
 
 @{
-    ViewData["Title"] = "Change Password";
+    ViewData["Title"] = "Reset Password";
 }
 
 <div class="container pt-5">
@@ -10,21 +10,15 @@
             <div class="card">
                 <h5 class="card-header">Change Password</h5>
                 <div class="card-body">
-                    <form asp-controller="EmployeeAccount" asp-action="ChangePassword" method="post" class="needs-validation" novalidate>
+                    <form asp-controller="EmployeeAccount" asp-action="ResetPassword" method="post" class="needs-validation" novalidate>
                         @if (!string.IsNullOrEmpty(Model.ErrorMessage))
                         {
                             <div class="alert alert-danger">
                                 @Model.ErrorMessage
                             </div>
                         }
-                        <div class="mb-3">
-                            <label asp-for="CurrentPassword" class="form-label"></label>
-                            <div class="input-group">
-                                <input asp-for="CurrentPassword" class="form-control" type="password" id="currentPassword" required>
-                                <button class="btn btn-outline-secondary" type="button" id="toggleCurrentPassword">Show</button>
-                            </div>
-                            <span asp-validation-for="CurrentPassword" class="text-danger"></span>
-                        </div>
+                        <input type="hidden" asp-for="Token" />
+                        <input type="hidden" asp-for="Username" />
                         <div class="mb-3">
                             <label asp-for="NewPassword" class="form-label"></label>
                             <div class="input-group">
@@ -50,8 +44,8 @@
     </div>
 </div>
 
- @section Scripts {
-      <partial name="_ValidationScriptsPartial" />
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
     <script>
         function togglePasswordVisibility(passwordInputId, toggleButtonId) {
             var passwordInput = document.getElementById(passwordInputId);
@@ -71,6 +65,5 @@
         // Call the function for both password fields
         togglePasswordVisibility('newPassword', 'toggleNewPassword');
         togglePasswordVisibility('repeatPassword', 'toggleRepeatPassword');
-        togglePasswordVisibility('currentPassword', 'toggleCurrentPassword');
     </script>
- }
+}
