--- a/src/Presentation/Views/EmployeeAccount/ForgotPassword.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/ForgotPassword.cshtml
@@ -14,6 +14,7 @@
                         <div class="mb-3">
                             <label asp-for="Email" class="form-label"></label>
                             <input asp-for="Email" class="form-control" type="email" required>
+                            <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
 
                         <button type="submit" class="btn btn-dark w-100">
@@ -26,48 +27,6 @@
     </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="emailSentModal" tabindex="-1" aria-labelledby="emailSentModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="emailSentModalLabel">Email Sent</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                A verification email has been sent to this email address.
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="history.back();">Go Back</button>
-            </div>
-        </div>
-    </div>
-</div>
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script>
-        (function () {
-            'use strict';
-            window.addEventListener('load', function () {
-                var form = document.getElementsByClassName('needs-validation')[0];
-                form.addEventListener('submit', function (event) {
-                    if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                    }
-                    form.classList.add('was-validated');
-                }, false);
-
-                // Show the modal if the email was sent
-                @if (Model.WasEmailSent)
-                {
-                    <text>
-                        var emailSentModal = new bootstrap.Modal(document.getElementById('emailSentModal'));
-                        emailSentModal.show();
-                    </text>
-                }
-            }, false);
-        })();
-    </script>
 }
