--- a/src/Presentation/Views/EmployeeAccount/Profile.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@model Nika1337.Library.Presentation.Models.EmployeeAccount.EmployeeProfileViewModel
+﻿@model Nika1337.Library.Presentation.Models.EmployeeAccount.EmployeePersonalProfileViewModel
 
 @{
     ViewData["Title"] = "Profile";
@@ -11,7 +11,15 @@
 }
 
 <div class="container pt-5">
-    <form asp-action="EmployeeProfile" asp-controller="EmployeeAccount" method="post" class="needs-validation">
+    @if (!string.IsNullOrEmpty(Model.ErrorMessage))
+    {
+        <div class="d-flex flex-column align-items-center">
+            <div class="alert alert-danger" style="width: fit-content">
+                @Model.ErrorMessage
+            </div>
+        </div>
+    }
+    <form asp-action="Profile" asp-controller="EmployeeAccount" method="post" class="needs-validation">
         <div class="row">
             <!-- Account Info Card - 1/3 width -->
             <div class="col-md-4">
@@ -21,19 +29,23 @@
                         <div class="mb-3">
                             <label asp-for="FirstName" class="form-label"></label>
                             <input asp-for="FirstName" class="form-control" required>
+                            <span asp-validation-for="FirstName" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label asp-for="LastName" class="form-label"></label>
                             <input asp-for="LastName" class="form-control" required>
+                            <span asp-validation-for="LastName" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label asp-for="Username" class="form-label"></label>
                             <input asp-for="Username" class="form-control" required>
+                            <span asp-validation-for="Username" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
                             <label asp-for="PhoneNumber" class="form-label"></label>
                             <input asp-for="PhoneNumber" class="form-control">
+                            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
@@ -45,6 +57,8 @@
                                     <option value="@gender.Value">@gender.Text</option>
                                 }
                             </select>
+
+                            <span asp-validation-for="Gender" class="text-danger"></span>
                         </div>
                     </div>
                 </div>
@@ -58,22 +72,27 @@
                         <div class="mb-3">
                             <label asp-for="Country" class="form-label"></label>
                             <input asp-for="Country" class="form-control">
+                            <span asp-validation-for="Country" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label asp-for="State" class="form-label"></label>
                             <input asp-for="State" class="form-control">
+                            <span asp-validation-for="State" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label asp-for="City" class="form-label"></label>
                             <input asp-for="City" class="form-control">
+                            <span asp-validation-for="City" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label asp-for="Street" class="form-label"></label>
                             <input asp-for="Street" class="form-control">
+                            <span asp-validation-for="Street" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label asp-for="PostalCode" class="form-label"></label>
                             <input asp-for="PostalCode" class="form-control">
+                            <span asp-validation-for="PostalCode" class="text-danger"></span>
                         </div>
                     </div>
                 </div>
@@ -119,22 +138,4 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script>
-        (function () {
-            'use strict';
-            window.addEventListener('load', function () {
-                var forms = document.getElementsByClassName('needs-validation');
-                Array.prototype.filter.call(forms, function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (form.checkValidity() === false) {
-                            event.preventDefault();
-                            event.stopPropagation();
-                        }
-
-                        form.classList.add('was-validated');
-                    }, false);
-                });
-            }, false);
-        })();
-    </script>
 }
