--- a/src/Presentation/Views/EmployeeAccount/SignIn.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/SignIn.cshtml
@@ -20,6 +20,7 @@
                         <div class="mb-3">
                             <label asp-for="Username" placeholder="johndoe1293" class="form-label"></label>
                             <input asp-for="Username" class="form-control" required>
+                            <span asp-validation-for="Username" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label asp-for="Password" class="form-label"></label>
@@ -27,6 +28,7 @@
                                 <input asp-for="Password" class="form-control" type="password" name="password" id="password" required>
                                 <button class="btn btn-outline-secondary" type="button" id="togglePassword">Show</button>
                             </div>
+                            <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                         <button type="submit" class="btn btn-dark w-100">Sign In</button>
                         <div class="mt-3 text-center">
@@ -58,16 +60,7 @@
                 }
             });
 
-            window.addEventListener('load', function () {
-                var form = document.getElementsByClassName('needs-validation')[0];
-                form.addEventListener('submit', function (event) {
-                    if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                    }
-                    form.classList.add('was-validated');
-                }, false);
-            }, false);
+            
         })();
     </script>
 }
