--- a/src/Presentation/Views/EmployeeManagement/RegisterEmployee.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/RegisterEmployee.cshtml
@@ -66,7 +66,7 @@
 
 
                 <div class="row">
-                    <div class="col-md-8 mb-3">
+                    <div class="col-md-9 mb-3">
                         <div class="form-group">
                             <label asp-for="SelectedRoles">Roles</label>
                             <div>
@@ -83,8 +83,8 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4 d-flex align-items-end justify-content-end mb-3">
-                        <button type="submit" class="btn btn-dark w-100" style="min-height: 45px;">Register</button>
+                    <div class="d-flex align-items-end justify-content-end fab-container">
+                        <button type="submit" class="btn btn-primary fab" >Register</button>
                     </div>
                 </div>
             </form>
