--- a/src/Presentation/Views/Shared/Components/Navigation/Default.cshtml
+++ b/src/Presentation/Views/Shared/Components/Navigation/Default.cshtml
@@ -69,7 +69,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Library Management</a>
+        <a class="navbar-brand" href="/">Library Management</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -86,15 +86,3 @@
         </div>
     </div>
 </nav>
-
-<style>
-    .dropdown-item {
-        z-index: 10000;
-    }
-    .dropdown-menu {
-        z-index: 10000;
-    }
-    .dropdown-submenu {
-        z-index: 10000;
-    }
-</style>
