--- a/src/Presentation/Views/EmployeeAccount/Profile.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/Profile.cshtml
@@ -129,9 +129,10 @@
                 </div>
             </div>
         </div>
-
-        <div class="text-center">
-            <button type="submit" class="btn btn-dark mt-3">Update Profile</button>
+        <div class="fab-container">
+            <button type="submit" class="btn btn-primary fab">
+                Save
+            </button>
         </div>
     </form>
 </div>
