--- a/src/Presentation/Views/Operations/EmailTemplates.cshtml
+++ b/src/Presentation/Views/Operations/EmailTemplates.cshtml
@@ -2,13 +2,45 @@
 
 @{
     ViewData["Title"] = "Email Templates";
+
+    var userAction = Model.SelectedEmailTemplate?.DeletedDate == null ? "Delete" : "Renew";
+    var actionButtonClass = Model.SelectedEmailTemplate?.DeletedDate == null ? "btn-danger" : "btn-warning";
 }
 
-<div class="container-fluid p-0">
-    <div class="row g-0">
+<div class="container-fluid p-0 vh-100">
+    <div class="row g-0" style="display: flex; align-items: stretch">
         <!-- Sidebar -->
-        <div class="col-12 col-md-2 bg-white p-0 border-end">
-            <nav class="navbar navbar-expand-md navbar-light p-0">
+        <div class="col-12 col-lg-3  bg-white p-0 border-end d-none d-lg-block">
+            <nav class="navbar navbar-expand-lg flex-md-column align-items-stretch navbar-light p-0 h-100">
+                <div class="list-group list-group-flush border-bottom scrollarea">
+                    @foreach (var template in Model.EmailTemplates)
+                    {
+                        <a asp-controller="Operations" asp-action="EmailTemplates" asp-route-id="@template.Id" class="list-group-item list-group-item-action @(Model.SelectedEmailTemplate != null && Model.SelectedEmailTemplate.Id == template.Id ? "active" : "") py-3 lh-tight w-100">
+                            <div class="d-flex justify-content-between">
+                                <div class="row">
+                                    <h5 class="mb-1">@template.Name</h5>
+                                    <p class="mb-1">@template.BriefDescription</p>
+                                </div>
+                                <div>
+                                    @if (template.IsActive)
+                                    {
+                                        <span class="badge bg-success">Active</span>
+                                    }
+                                    else
+                                    {
+                                        <span class="badge bg-danger">Deleted</span>
+                                    }
+                                </div>
+                            </div>
+                        </a>
+                    }
+                </div>
+            </nav>
+        </div>
+
+        <!-- Offcanvas for mobile -->
+        <div class="col-12 d-lg-none">
+            <nav class="navbar navbar-expand-lg navbar-light p-0">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -21,8 +53,20 @@
                             @foreach (var template in Model.EmailTemplates)
                             {
                                 <a asp-controller="Operations" asp-action="EmailTemplates" asp-route-id="@template.Id" class="list-group-item list-group-item-action @(Model.SelectedEmailTemplate != null && Model.SelectedEmailTemplate.Id == template.Id ? "active" : "") py-3 lh-tight w-100">
-                                    <h5 class="mb-1">@template.Name</h5>
-                                    <p class="mb-1">@template.BriefDescription</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div>
+                                            <h5 class="mb-1">@template.Name</h5>
+                                            <p class="mb-1">@template.BriefDescription</p>
+                                        </div>
+                                        @if (template.IsActive)
+                                        {
+                                            <span class="badge bg-success">Active</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="badge bg-danger">Deleted</span>
+                                        }
+                                    </div>
                                 </a>
                             }
                         </div>
@@ -32,70 +76,119 @@
         </div>
 
         <!-- Main content -->
-        <div class="col-12 col-md-10 p-5 ">
-            @if (Model.SelectedEmailTemplate is not null)
-            {
-                <form asp-action="SaveTemplate" method="post">
-                    <input type="hidden" asp-for="SelectedEmailTemplate.Id" />
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <div class="form-group mb-3">
-                                <label asp-for="SelectedEmailTemplate.Name" class="form-label"></label>
-                                <input asp-for="SelectedEmailTemplate.Name" class="form-control" />
-                            </div>
+        <div class="col-12 col-lg-9 p-5">
+            <div class="d-flex align-items-center justify-content-center">
+                @if (!string.IsNullOrEmpty(Model.ErrorMessage))
+                {
+                    <div class="d-flex flex-column align-items-center">
+                        <div class="alert alert-danger" style="width: fit-content">
+                            @Model.ErrorMessage
                         </div>
-
-                        <div class="col-md-6 mb-3">
-                            <div class="form-group mb-3">
-                                <label asp-for="SelectedEmailTemplate.Subject" class="form-label"></label>
-                                <input asp-for="SelectedEmailTemplate.Subject" class="form-control" />
-                            </div>
+                    </div>
+                }
+            </div>
+            <form asp-controller="Operations" asp-action="EmailTemplates" asp-route-itemid="@Model.SelectedEmailTemplate.Id" method="post">
+                <input type="hidden" asp-for="SelectedEmailTemplate.Id" />
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <div class="form-group mb-3">
+                            <label asp-for="SelectedEmailTemplate.Name" class="form-label"></label>
+                            <input asp-for="SelectedEmailTemplate.Name" class="form-control" />
+                            <span asp-validation-for="SelectedEmailTemplate.Name" class="text-danger"></span>
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <div class="form-group mb-3">
-                                <label asp-for="SelectedEmailTemplate.FromEmail" class="form-label"></label>
-                                <input asp-for="SelectedEmailTemplate.FromEmail" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <div class="form-group mb-3">
-                                <label asp-for="SelectedEmailTemplate.BriefDescription" class="form-label"></label>
-                                <input asp-for="SelectedEmailTemplate.BriefDescription" class="form-control" />
-                            </div>
+                    <div class="col-md-6 mb-3">
+                        <div class="form-group mb-3">
+                            <label asp-for="SelectedEmailTemplate.Subject" class="form-label"></label>
+                            <input asp-for="SelectedEmailTemplate.Subject" class="form-control" />
+                            <span asp-validation-for="SelectedEmailTemplate.Subject" class="text-danger"></span>
                         </div>
                     </div>
+                </div>
 
-                    <div class="row">
-                        <div class="col-md-4 mb-3">
-                            <div class="form-group mb-3">
-                                <label asp-for="SelectedEmailTemplate.CreatedDate" class="form-label"></label>
-                                <input asp-for="SelectedEmailTemplate.CreatedDate" class="form-control" readonly />
-                            </div>
-                        </div>
-                        <div class="col-md-4 mb-3">
-                            <div class="form-group mb-3">
-                                <label asp-for="SelectedEmailTemplate.LastUpdatedDate" class="form-label"></label>
-                                <input asp-for="SelectedEmailTemplate.LastUpdatedDate" class="form-control" readonly />
-                            </div>
-                        </div>
-                        <div class="col-md-4 mb-3">
-                            <div class="form-group mb-3">
-                                <label asp-for="SelectedEmailTemplate.DeletedDate" class="form-label"></label>
-                                <input asp-for="SelectedEmailTemplate.DeletedDate" class="form-control" readonly />
-                            </div>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <div class="form-group mb-3">
+                            <label asp-for="SelectedEmailTemplate.FromEmail" class="form-label"></label>
+                            <input asp-for="SelectedEmailTemplate.FromEmail" class="form-control" />
+                            <span asp-validation-for="SelectedEmailTemplate.FromEmail" class="text-danger"></span>
                         </div>
                     </div>
+                    <div class="col-md-6 mb-3">
+                        <div class="form-group mb-3">
+                            <label asp-for="SelectedEmailTemplate.BriefDescription" class="form-label"></label>
+                            <input asp-for="SelectedEmailTemplate.BriefDescription" class="form-control" />
+                            <span asp-validation-for="SelectedEmailTemplate.BriefDescription" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
 
-                    <div class="form-group mb-3">
-                        <label asp-for="SelectedEmailTemplate.Body" class="form-label"></label>
-                        <textarea asp-for="SelectedEmailTemplate.Body" class="form-control" id="tinymce-editor"></textarea>
+                <div class="row">
+                    <div class="col-md-4 mb-3">
+                        <div class="form-group mb-3">
+                            <label asp-for="SelectedEmailTemplate.CreationDate" class="form-label"></label>
+                            <input asp-for="SelectedEmailTemplate.CreationDate" class="form-control" readonly />
+                            <span asp-validation-for="SelectedEmailTemplate.CreationDate" class="text-danger"></span>
+                        </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Save</button>
-                </form>
-            }
+                    <div class="col-md-4 mb-3">
+                        <div class="form-group mb-3">
+                            <label asp-for="SelectedEmailTemplate.LastUpdatedDate" class="form-label"></label>
+                            <input asp-for="SelectedEmailTemplate.LastUpdatedDate" class="form-control" readonly />
+                            <span asp-validation-for="SelectedEmailTemplate.LastUpdatedDate" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <div class="form-group mb-3">
+                            <label asp-for="SelectedEmailTemplate.DeletedDate" class="form-label"></label>
+                            <input asp-for="SelectedEmailTemplate.DeletedDate" class="form-control" readonly />
+                            <span asp-validation-for="SelectedEmailTemplate.LastUpdatedDate" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group mb-3" style="width: fit-content">
+                    <label asp-for="SelectedEmailTemplate.Separator" class="form-label"></label>
+                    <input asp-for="SelectedEmailTemplate.Separator" class="form-control" />
+                    <span asp-validation-for="SelectedEmailTemplate.Separator" class="text-danger"></span>
+                </div>
+                <div class="form-group" style="margin-bottom: 10rem">
+                    <label asp-for="SelectedEmailTemplate.Body" class="form-label"></label>
+                    <textarea asp-for="SelectedEmailTemplate.Body" class="form-control" id="tinymce-editor"></textarea>
+                </div>
+
+                <div class="fab-container">
+                    <div class="d-flex flex-column">
+                        <button type="submit" class="btn btn-primary mb-2 fab">
+                            Save
+                        </button>
+                        <button type="button" class="btn  @actionButtonClass fab" data-bs-toggle="modal" data-bs-target="#actionModal">
+                            @userAction
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+
+<!-- Action Confirmation Modal -->
+<div class="modal fade" id="actionModal" tabindex="-1" aria-labelledby="actionModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="actionModalLabel">Confirm Termination</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to @userAction this email template?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn @actionButtonClass" id="confirmAction">@userAction</button>
+            </div>
         </div>
     </div>
 </div>
@@ -115,37 +208,63 @@
                 'forecolor backcolor emoticons | help',
             menubar: 'favs file edit view insert format tools table help',
             content_style: 'body { font-family:Helvetica,Arial,sans-serif; font-size:16px }',
-            height: 400,
-            resize: 'none',
+            height: 800,
+            resize: true,
         });
+
+        (function () {
+            'use strict';
+
+            document.getElementById('confirmAction').addEventListener('click', function () {
+                var id = @Model.SelectedEmailTemplate?.Id;
+
+                var token = document.querySelector('input[name="__RequestVerificationToken"]').value;
+
+                fetch(`/Operations/@(userAction)EmailTemplate/${id}`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'RequestVerificationToken': token
+                    }
+                }).then(response => {
+                    if (response.ok) {
+                            window.location.href = `/Operations/EmailTemplates/${id}`;
+                    } else {
+                        alert('An error occurred while trying to @userAction the template.');
+                    }
+                });
+            });
+        })();
+
     </script>
 }
 
-<style>
-    .offcanvas {
-        width: 100%;
-    }
-
-
-    @@media (min-width: 768px) {
+@section Styles {
+    <style>
         .offcanvas {
-            width: 300px;
+            width: 100%;
         }
-    }
 
-    .list-group-item {
-        width: 100%;
-        box-sizing: border-box;
-    }
+        @@media (min-width: 992px) {
+            .offcanvas {
+                width: 300px;
+            }
+        }
 
-    .offcanvas-body .list-group {
-        width: 100%;
-    }
+        .list-group-item {
+            width: 100%;
+            box-sizing: border-box;
+        }
 
-    .list-group-item.active {
-        z-index: 2;
-        color: #fff;
-        background-color: darkgoldenrod;
-        border-color: darkgoldenrod;
-    }
-</style>
+        .offcanvas-body .list-group {
+            width: 100%;
+        }
+
+        .list-group-item.active {
+            z-index: 2;
+            color: #fff;
+            background-color: darkgoldenrod;
+            border-color: darkgoldenrod;
+        }
+    </style>
+}
