--- a/src/Presentation/wwwroot/css/site.css
+++ b/src/Presentation/wwwroot/css/site.css
@@ -25,3 +25,40 @@ body {
     border-color: darkgoldenrod;
     background-color: darkgoldenrod;
 }
+
+.fab-container {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 1000;
+}
+
+.fab {
+    min-width: 150px;
+    height: 60px;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.dropdown-item {
+    z-index: 10000;
+}
+
+.dropdown-menu {
+    z-index: 10000;
+}
+
+.dropdown-submenu {
+    z-index: 10000;
+    position: relative
+}
+
+    .dropdown-submenu .dropdown-menu {
+        top: 0;
+        left: 100%;
+        margin-top: -1px;
+    }
