--- a/src/Presentation/Views/Operations/EmailTemplates.cshtml
+++ b/src/Presentation/Views/Operations/EmailTemplates.cshtml
@@ -251,8 +251,8 @@
         .list-group-item.active {
             z-index: 2;
             color: #fff;
-            background-color: darkgoldenrod;
-            border-color: darkgoldenrod;
+            background-color: #784EF1;
+            border-color: #784EF1;
         }
     </style>
 }
