--- a/src/Presentation/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/custom_bootstrap.css" asp-append-version="true" />
     @RenderSection("Styles", required: false)
 </head>
 <body>
