--- a/src/Presentation/Views/Home/Index.cshtml
+++ b/src/Presentation/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="d-flex justify-content-center">
-    <h6 class="display-4">Welcome to Library Management Site</h6>
+<div class="container">
+    <div class="position-absolute top-50 start-50 translate-middle">
+        <h6 class="display-4">Welcome to Library Management Site</h6>
+    </div>
 </div>
