--- a/src/Presentation/Views/Home/Error.cshtml
+++ b/src/Presentation/Views/Home/Error.cshtml
@@ -1,4 +1,3 @@
-ï»¿@model Exception;
 
 @{
     ViewData["Title"] = "Error";
@@ -9,8 +8,9 @@
         <h1 class="display-1 fw-bold">404</h1>
         <p class="fs-3"> <span class="text-danger">Opps!</span> Page not found.</p>
         <p class="lead">
-            The page youâ€™re looking for doesnâ€™t exist.
+            The page you’re looking for doesn’t exist.
         </p>
         <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Go Home</a>
     </div>
 </div>
+
